--- a/q3_difabioLuca.html
+++ b/q3_difabioLuca.html
@@ -4,7 +4,7 @@
         
     </head>
     
-    <body background="images/image3.jpg">
+    <body style="background-color:pink">
         <p><b> Question 3: Which of the following coding languages would you use to customize the appearance of a website?  </b></p>
         <ol type="a">
             <li>HTML</li>
