--- a/q5_difabioLuca.html
+++ b/q5_difabioLuca.html
@@ -4,7 +4,7 @@
         
     </head>
     
-    <body background="images/image5.jpg">
+    <body style="background-color:yellow">
         <p><b> Question 5: Which of the following does “MIT” stand for? </b></p>
         <ol type="a">
             <li>Michigan Institute of Technology</li>
