--- a/q8_difabioLuca.html
+++ b/q8_difabioLuca.html
@@ -9,7 +9,7 @@
  </head>
  
    
-    <body>
+    <body style="background-color:orangered">
       
   <p><b>  Which HTML syntax should you use to add JavaScript?  </b></p>
  
