--- a/final.html
+++ b/final.html
@@ -3,9 +3,9 @@
     <head>
         
     </head>
-    <body>
-        <h1> Congratulations</h1>
-    <h3> You Have Scored Over 80% Or Over And Have Passed This Test</h3>
-    <h5> Click <a>here</a> to continue on to our 2nd quiz!!!</h5>
+    <body style="background-color:black">
+        <h1 style="color:white"> Congratulations</h1>
+    <h3 style="color:white"> You Have Scored Over 80% Or Over And Have Passed This Test</h3>
+    <h5 style="color:white"> Click <a>here</a> to continue on to our 2nd quiz!!!</h5>
     </body>
 </html>
