--- a/q6_difabioLuca.html
+++ b/q6_difabioLuca.html
@@ -9,7 +9,7 @@
  </head>
  
    
-    <body>
+    <body style="background-color:#fff8e7">
       
   <p>  What is considered the brain of a computer?  </p>
  
