--- a/q7_difabioLuca.html
+++ b/q7_difabioLuca.html
@@ -9,7 +9,7 @@
  </head>
  
    
-    <body>
+    <body style="background-color:blue">
       
   <p> Which of the following is not an example of cloud computing?  </p>
  
