--- a/q2_difabioLuca.html
+++ b/q2_difabioLuca.html
@@ -9,7 +9,7 @@
  </head>
  
    
-    <body background="images/image2.jpg">
+    <body style="background-color:yellow">
       
   <p><b> Question 2: Which of the following is an example of a security software?  </b></p>
  
