--- a/q1_difabioLuca.html
+++ b/q1_difabioLuca.html
@@ -5,7 +5,7 @@
         
     </head>
     
-    <body background="images/image1.jpg">
+    <body style="background-color:skyblue">
         <p><b> Question 1: Which of the following hardware components does not go inside the computer itself?  </b></p>
         <ol type="a">
             <li>CPU</li>
