made changes to questions 6-10
made changes to questions 6-10

--- a/q6_difabioLuca.html
+++ b/q6_difabioLuca.html
@@ -10,8 +10,9 @@
  
    
     <body style="background-color:#fff8e7">
+
       
-  <p>  What is considered the brain of a computer?  </p>
+  <p><b> Question 6: What is considered the brain of a computer? </b>  </p>
  
        <ol type="a">
 
