--- a/q7_difabioLuca.html
+++ b/q7_difabioLuca.html
@@ -11,7 +11,7 @@
    
     <body style="background-color:blue">
       
-  <p> Which of the following is not an example of cloud computing?  </p>
+  <p> <b>Question 7: Which of the following is not an example of cloud computing? </b> </p>
  
        <ol type="a">
 
