--- a/final.html
+++ b/final.html
@@ -6,6 +6,6 @@
     <body style="background-color:black">
         <h1 style="color:white"> Congratulations</h1>
     <h3 style="color:white"> You Have Scored Over 80% Or Over And Have Passed This Test</h3>
-    <h5 style="color:white"> Click <a href="demattj7497.github.io/trivia.html">here</a> to continue on to our 2nd quiz!!!</h5>
+    <h5 style="color:white"> Click <a href="https://demattj7497.github.io/trivia.html">here</a> to continue on to our 2nd quiz!!!</h5>
     </body>
 </html>
